--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,17 @@ numpy==1.20.3
 pandas==1.3.4
 scipy==1.7.3
 h5py==3.6.0
-anndata==0.7.8
+anndata==0.9.2
 scanpy==1.8.2
 umap-learn==0.5.2
 pynndescent==0.5.5
-python-igraph==0.10.4
+python-igraph==0.10.4s
 louvain==0.8.0
 matplotlib==3.5.2
+matplotlib-inline==0.1.3
 seaborn==0.11.2
 scikit-learn==1.0.1
+scikit-misc==0.1.4
 pyro-ppl==1.7.0
 pyro-api==0.1.2
 numba==0.54.1
